@@ -1381,10 +1381,10 @@ void CColladaMeshWriter::writeMaterialEffect(const irr::core::stringw& materialf
 					Writer->writeClosingTag(L"wrap_t");
 					Writer->writeLineBreak();
 
-		//			<wrap_r>WRAP</wrap_r>
-					Writer->writeElement(L"wrap_r", false);
+		//			<wrap_p>WRAP</wrap_p>
+					Writer->writeElement(L"wrap_p", false);
 					Writer->writeText(toString((video::E_TEXTURE_CLAMP)layer.TextureWrapW).c_str());
-					Writer->writeClosingTag(L"wrap_r");
+					Writer->writeClosingTag(L"wrap_p");
 					Writer->writeLineBreak();
 
 		//			<minfilter>LINEAR_MIPMAP_LINEAR</minfilter>
